<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CadastrarCachorro">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/raca"
            android:inputType="text"
            android:id="@+id/et_raca"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/preco"
            android:inputType="numberDecimal"
            android:id="@+id/et_preco"
            />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/para_criancas"
            android:id="@+id/para_criancas"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:layout_marginTop="20dp"
            android:onClick="cadastro"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/iv_cachorro_feliz"
            android:visibility="invisible"
            android:src="@drawable/cachorrofeliz"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cadastro_ok"
            android:gravity="center"
            android:text="@string/cadastro_cachorro_ok"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>